syntax = "proto3";

package rr;

option go_package = "rr/gen/go/rr";

import "google/protobuf/timestamp.proto";

message Run {
  string id = 1; 
  string name = 2;
  bytes spec = 3;
  int64 first_event = 4; 
  map<string,string> vars = 5; 
}

message NewEvent {
  int64 id = 1;
}

message RunEvent{
  // ENV,
  // Raw command,
  // Interpolated arguments,
  map<string,string> env = 1;
  string command = 2; 
}               

message StdOutEvent {
  bytes data = 1;
}

message StdErrEvent {
  bytes data = 1; 
}

message ResultEvent {
}

message File {
}


message Event {
  int64 id = 1; 
  int32 group = 2;
  int32 type = 3; 
  google.protobuf.Timestamp timestamp = 4;
  oneof Event{
    NewEvent new_event = 5;
    RunEvent run_event = 6; 
    StdOutEvent stdout_event = 7;
    StdErrEvent stderr_event = 8; 
    ResultEvent restult_event = 9;
  }  
}

message Message {
  oneof Msg {
    Run run =  1;
    File file = 2; 
    Event event = 3;
  }
};


